crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@flowchart__empty.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/flowchart/empty.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [],
  "edges": []
}
