crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@flowchart__link-lengths.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/flowchart/link-lengths.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "a",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "a"
      ]
    },
    {
      "id": "b",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "b"
      ]
    },
    {
      "id": "c",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "c"
      ]
    },
    {
      "id": "d",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "d"
      ]
    },
    {
      "id": "e",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "e"
      ]
    },
    {
      "id": "f",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "f"
      ]
    },
    {
      "id": "g",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "g"
      ]
    },
    {
      "id": "h",
      "shape": {
        "kind": "rectangle"
      },
      "label": [
        "h"
      ]
    }
  ],
  "edges": [
    {
      "from": "a",
      "to": "b",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 2
    },
    {
      "from": "a",
      "to": "c",
      "stroke": "solid",
      "tail": "none",
      "head": "arrow",
      "min_length": 3
    },
    {
      "from": "a",
      "to": "d",
      "stroke": "solid",
      "tail": "none",
      "head": "none",
      "min_length": 2
    },
    {
      "from": "a",
      "to": "e",
      "stroke": "dotted",
      "tail": "none",
      "head": "arrow",
      "min_length": 2
    },
    {
      "from": "a",
      "to": "f",
      "stroke": "dotted",
      "tail": "none",
      "head": "none",
      "min_length": 3
    },
    {
      "from": "a",
      "to": "g",
      "stroke": "thick",
      "tail": "none",
      "head": "arrow",
      "min_length": 2
    },
    {
      "from": "a",
      "to": "h",
      "stroke": "invisible",
      "tail": "none",
      "head": "none",
      "min_length": 2
    }
  ]
}
